[package]
name = "multi-party-ecdsa"
version = "0.4.4"
edition = "2018"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
default = ["curv/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "0.10.1"
p256 = { version = "0.5.2", features = ["ecdsa"] }
ecdsa = "0.10.2"
sha256 = "1.0.0"

[dependencies.curv]
git = "https://github.com/jirigav/curv"
tag = "v0.6.2"
default-features = false

[dependencies.centipede]
git = "https://github.com/jirigav/centipede"
tag = "v0.2.11"
default-features = false

[dependencies.paillier]
git = "https://github.com/jirigav/rust-paillier"
tag = "v0.3.9"
default-features = false

[dependencies.zk-paillier]
git = "https://github.com/jirigav/zk-paillier"
tag = "v0.3.11"
default-features = false

[dependencies.class_group]
git = "https://github.com/KZen-networks/class"
tag = "v0.4.16"
optional = true

[dev-dependencies]
criterion = "0.3"
rust-crypto = "0.2"
hex = "0.4"
serde_json = "1.0"
rand = "0.7"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[[example]]
name = "gg18_sign"

[[example]]
name = "gg18_setup"

[[example]]
name = "utils"
crate-type = ["lib"]

[[bench]]
name = "cclst_keygen"
path = "benches/two_party_ecdsa/cclst_2019/keygen.rs"
required-features = ["cclst"]
harness = false

[[bench]]
name = "cclst_sign"
path = "benches/two_party_ecdsa/cclst_2019/sign.rs"
required-features = ["cclst"]
harness = false


[[bench]]
name = "gg18"
path = "benches/multi_party_ecdsa/gg18/keygen.rs"
harness = false

[[bench]]
name = "lindel2017_keygen"
path = "benches/two_party_ecdsa/lindell_2017/keygen.rs"
harness = false


[[bench]]
name = "lindel2017_sign"
path = "benches/two_party_ecdsa/lindell_2017/sign.rs"
harness = false
